# agent-os

./: .dockerignore  CLAUDE.md  Dockerfile  elabx-org-agent-os-0.2.43.tgz  package-lock.json  package.json  proxy.ts  server.ts  tsconfig.json
.github/workflows/: docker.yml
app/: globals.css  page.tsx
app/auth/: page.tsx
components/: ChatMessage.tsx  ChatView.tsx  FilePicker.tsx  ImagePicker.tsx  MinimaxUsageMonitor.tsx  SessionCard.tsx  TmuxSessions.tsx  UsageMonitor.tsx
components/ClaudeConfig/: ClaudeConfigDialog.tsx  ClaudeConfigDialog.types.ts  ClaudeMdTab.tsx  InstallFromGitHub.tsx  ItemEditor.tsx  ItemList.tsx  McpInstallForm.tsx  McpServerEditor.tsx  McpServersTab.tsx  PluginsTab.tsx  SkillStore.tsx  StoreSourceManager.tsx  index.tsx
components/FileExplorer/: index.tsx
components/GitDrawer/: BranchSelector.tsx  index.tsx
components/GitPanel/: CommitForm.tsx  GitPanelTabs.tsx  PRReview.tsx  StashList.tsx  index.tsx
components/NewSessionDialog/: AdvancedSettings.tsx  AgentSelector.tsx  NewSessionDialog.types.ts  WorkingDirectoryInput.tsx  WorktreeSection.tsx  index.tsx
components/Pane/: DesktopTabBar.tsx  MobileTabBar.tsx  index.tsx
components/Projects/: ProjectCard.tsx
components/SessionList/: SessionListHeader.tsx  index.tsx
lib/: file-upload.ts  files.ts  frontmatter.ts  git-status.ts  github.ts  orchestration.ts  pr-generation.ts  pr.ts  providers.ts  store-sync.ts
scripts/: agent-os  install.sh
src-tauri/: .gitignore  Cargo.toml  Dockerfile.linux  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+84 files in other folders)
