[package]
name = "agent-os"
version = "0.1.0"
description = "AgentOS Desktop - Manage AI coding sessions"
authors = ["AgentOS"]
edition = "2021"

[[bin]]
name = "AgentOS"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
